fix(caliobase-ui): getOrganizationToken has an optional body now
